WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
34763
CSS 2.1 failure: margin-applies-to-015 fails, WebKit does not respect top margin for table captions
https://bugs.webkit.org/show_bug.cgi?id=34763
Summary
CSS 2.1 failure: margin-applies-to-015 fails, WebKit does not respect top mar...
sangeetha.sugavanam
Reported
2010-02-09 10:38:42 PST
Use case: - Use case: 8.3 Margin applied to element with display table-caption Steps to reproduce: 1) Launch QtLauncher. 2) Unzip contents of the zip file. 3) Load the html page using QtLauncher. 4) Click "Link" on the page. 5) Check the page. - Actual outcome: There is no space between the above horizontal lines of blue and orange box. - Expected outcome: There should be space between the above horizontal lines of blue and orange box.
Attachments
test case
(44.33 KB, application/x-zip-compressed)
2010-02-09 10:40 PST
,
sangeetha.sugavanam
no flags
Details
Patch
(207.49 KB, patch)
2011-08-28 05:17 PDT
,
Robert Hogan
no flags
Details
Formatted Diff
Diff
Patch
(207.50 KB, patch)
2011-08-29 10:33 PDT
,
Robert Hogan
simon.fraser
: review+
simon.fraser
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
sangeetha.sugavanam
Comment 1
2010-02-09 10:40:20 PST
Created
attachment 48428
[details]
test case
Tor Arne Vestbø
Comment 2
2010-03-10 06:31:54 PST
Please follow the QtWebKit bug reporting guidelines when reporting bugs. See
http://trac.webkit.org/wiki/QtWebKitBugs
Specifically: - The 'QtWebKit' component should only be used for bugs/features in the public QtWebKit API layer, not to signify that the bug is specific to the Qt port of WebKit
http://trac.webkit.org/wiki/QtWebKitBugs#Component
- Add the keyword 'Qt' to signal that it's a Qt-related bug
http://trac.webkit.org/wiki/QtWebKitBugs#Keywords
Robert Hogan
Comment 3
2010-03-10 13:31:38 PST
Test link is:
http://www.w3.org/Style/CSS/Test/CSS2.1/20100127/html4/margin-applies-to-015.htm
Fails on Chromium too, marking as WebCore CSS.
Robert Hogan
Comment 4
2011-08-28 05:17:47 PDT
Created
attachment 105448
[details]
Patch
Simon Fraser (smfr)
Comment 5
2011-08-28 09:14:50 PDT
Can you retitle the bug to describe the actual problem here? Does this fix any of the bugs listed as dependent on
bug 47141
?
Robert Hogan
Comment 6
2011-08-28 09:27:32 PDT
(In reply to
comment #5
)
> Can you retitle the bug to describe the actual problem here? > > Does this fix any of the bugs listed as dependent on
bug 47141
?
The margin-applies-to* tests aren't listed there, so maybe this was a regression. Is there a reason all the tests in the suite haven't been landed? Is it wrong to add them to LayoutTests/CSS2.1/20110327 as I'm doing with this patch?
Simon Fraser (smfr)
Comment 7
2011-08-28 22:20:53 PDT
(In reply to
comment #6
)
> (In reply to
comment #5
) > > Can you retitle the bug to describe the actual problem here? > > > > Does this fix any of the bugs listed as dependent on
bug 47141
? > > The margin-applies-to* tests aren't listed there, so maybe this was a regression.
Unlikely. I didn't finish filing all the bugs for CSS 2.1 failures.
> Is there a reason all the tests in the suite haven't been landed? Is it wrong to add them to LayoutTests/CSS2.1/20110327 as I'm doing with this patch?
We just haven't merged the full 2.1 suite, because it's huge. I think it's OK to add them in there, since they'd be replaced with the actual tests if we land the new suite. Please update your patch with the more appropriate bug title.
Robert Hogan
Comment 8
2011-08-29 10:33:57 PDT
Created
attachment 105500
[details]
Patch
Simon Fraser (smfr)
Comment 9
2011-08-29 10:40:39 PDT
Comment on
attachment 105500
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=105500&action=review
> LayoutTests/ChangeLog:49 > + * css2.1/20110323/margin-applies-to-001-expected.png: Added. > + * css2.1/20110323/margin-applies-to-001-expected.txt: Added. > + * css2.1/20110323/margin-applies-to-001.htm: Added. > + * css2.1/20110323/margin-applies-to-002-expected.png: Added. > + * css2.1/20110323/margin-applies-to-002-expected.txt: Added. > + * css2.1/20110323/margin-applies-to-002.htm: Added. > + * css2.1/20110323/margin-applies-to-003-expected.png: Added. > + * css2.1/20110323/margin-applies-to-003-expected.txt: Added. > + * css2.1/20110323/margin-applies-to-003.htm: Added. > + * css2.1/20110323/margin-applies-to-004-expected.png: Added. > + * css2.1/20110323/margin-applies-to-004-expected.txt: Added. > + * css2.1/20110323/margin-applies-to-004.htm: Added. > + * css2.1/20110323/margin-applies-to-005-expected.png: Added. > + * css2.1/20110323/margin-applies-to-005-expected.txt: Added. > + * css2.1/20110323/margin-applies-to-005.htm: Added. > + * css2.1/20110323/margin-applies-to-006-expected.png: Added. > + * css2.1/20110323/margin-applies-to-006-expected.txt: Added. > + * css2.1/20110323/margin-applies-to-006.htm: Added. > + * css2.1/20110323/margin-applies-to-007-expected.png: Added. > + * css2.1/20110323/margin-applies-to-007-expected.txt: Added. > + * css2.1/20110323/margin-applies-to-007.htm: Added. > + * css2.1/20110323/margin-applies-to-008-expected.png: Added. > + * css2.1/20110323/margin-applies-to-008-expected.txt: Added. > + * css2.1/20110323/margin-applies-to-008.htm: Added. > + * css2.1/20110323/margin-applies-to-009-expected.png: Added. > + * css2.1/20110323/margin-applies-to-009-expected.txt: Added. > + * css2.1/20110323/margin-applies-to-009.htm: Added. > + * css2.1/20110323/margin-applies-to-010-expected.png: Added. > + * css2.1/20110323/margin-applies-to-010-expected.txt: Added. > + * css2.1/20110323/margin-applies-to-010.htm: Added. > + * css2.1/20110323/margin-applies-to-012-expected.png: Added. > + * css2.1/20110323/margin-applies-to-012-expected.txt: Added. > + * css2.1/20110323/margin-applies-to-012.htm: Added. > + * css2.1/20110323/margin-applies-to-013-expected.png: Added. > + * css2.1/20110323/margin-applies-to-013-expected.txt: Added. > + * css2.1/20110323/margin-applies-to-013.htm: Added. > + * css2.1/20110323/margin-applies-to-014-expected.png: Added. > + * css2.1/20110323/margin-applies-to-014-expected.txt: Added. > + * css2.1/20110323/margin-applies-to-014.htm: Added. > + * css2.1/20110323/margin-applies-to-015-expected.png: Added. > + * css2.1/20110323/margin-applies-to-015-expected.txt: Added. > + * css2.1/20110323/margin-applies-to-015.htm: Added.
The expected-* files here need to go in platform-specific results directories.
Robert Hogan
Comment 10
2011-08-31 11:47:57 PDT
Committed
r94211
: <
http://trac.webkit.org/changeset/94211
>
Simon Fraser (smfr)
Comment 11
2011-08-31 14:07:02 PDT
This seems to have resulted in some flakey tests: <
http://build.webkit.org/TestFailures/#/SnowLeopard%20Intel%20Debug%20(Tests
)> Please investigate.
Simon Fraser (smfr)
Comment 12
2011-08-31 14:07:43 PDT
I filed
bug 67317
on the flakes.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug